chore: upgraded signify library